--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "/dist/build.js",
+    "postinstall": "npm run build",
+    "start": "node server.js",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "express": "^4.16.2",
     "vue": "^2.5.11",
     "vue-router": "^3.0.1"
   },
