--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "bootstrap": "^3.3.7",
     "express": "^4.16.2",
     "vue": "^2.5.11",
     "vue-router": "^3.0.1"
